examples/test/testpolicy5852.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5852
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key33: value45
      key38: value36
      key2: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value31
          key46: value35
          key27: value41
      podSelector:
        matchLabels:
          key8: value39
